<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi">BMI:</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="hint_height">Enter height (cm)</string>
    <string name="hint_weight">Enter weight (kg)</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="error_value_required">Value Required!</string>
</resources>